# gif_compressor_app

./: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/: index.html  package.json
frontend-build/: package.json
frontend-build/src/components/: InstallGuide.tsx
frontend-build/src/hooks/: useDropzone.ts  useFileCompression.ts
frontend-final/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend-final/src/: App.tsx  index.css
frontend-final/src/components/: InstallGuide.tsx  Options.tsx
frontend-final/src/hooks/: useDropzone.ts  useFileCompression.ts
frontend-final/src/types/: window.d.ts
frontend/src/: tailwind.config.ts
frontend/src/hooks/: useDropzone.ts
src/: App.css  App.tsx  README.md  index.css  lib.rs  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src/components/: DragDrop.tsx  InstallGuide.tsx  Result.tsx
src/hooks/: useDropzone.ts  useFileCompression.ts
src/pages/: Index.tsx
src/types/: fileInfo.ts  index.ts
src/utils/: constants.ts  format.ts
